<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.idz.carehack.PatientOptionsActivity"
    android:background="#1d97f9">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="#1a7e11" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="3dp"
            app:srcCompat="@drawable/steth"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="20dp"
            android:textColor="#1d97f9"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/patient"
            android:contentDescription="@string/todo" />
    </TableRow>

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round"
        android:text="@string/book_appointment"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/history"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/round"
        android:text="@string/appointment_history"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/round"
        android:text="@string/contact_front_desk"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>
