<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.idz.carehack.book"
    android:background="#1d97f9">

    <Switch
        android:id="@+id/sw"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:shadowColor="#000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.5"
        android:text="@string/auto_booking"
        android:textColor="#fff"
        android:textSize="19sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:prompt="@string/doctor_prompt"
        android:entries="@array/doctor_arrays"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.5"
        android:shadowColor="#000"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:clickable="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColorHint="#b9d1d4"
        android:backgroundTint="#fff"
        android:textIsSelectable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/round"
        android:text="@string/submit"
        android:textSize="13sp"
        android:textStyle="bold" />
</LinearLayout>
